fix nav spacing and personal info

--- a/sass/_about.scss
+++ b/sass/_about.scss
@@ -7,6 +7,9 @@
   width: 93.75%;
   margin: 0 auto;
   line-height: 1.5;
+  h2 {
+    margin-bottom: 0.75em;
+  }
   li {
     margin-bottom: 0.5rem;
     list-style-type: none;
