--- a/sass/main.scss
+++ b/sass/main.scss
@@ -30,7 +30,7 @@ body {
     display: none;
     width: 100%;
     position: absolute;
-    top: 3em;
+    top: calc(3em + 2px);
     left: 0;
     text-align: center;
     background: inherit;
@@ -59,14 +59,12 @@ body {
   height: 100vh;
   position: relative;
   &-image-container {
-    width: 120px;
-    height: 150px;
+    width: auto;
+    height: 200px;
     position: absolute;
-    bottom: 3em;
-    left: 50%;
-    // margin-left: -60px;
-    transform: translateX(-50%);
-    border: 5px solid rgb(219, 219, 219);
+    right: 0;
+    top: 50%;
+    //border: 5px solid rgb(219, 219, 219);
   }
   &-image {
     height: 100%;
@@ -95,11 +93,17 @@ body {
     font-weight: normal;
     font-size: 1.5rem;
     padding-bottom: 0.5em;
+    margin-bottom: 1em;
   }
   &-button {
     padding: 0.7em 1em;
     outline: none;
     border: none;
+    display: block;
+    margin-bottom: 1em;
+    width: 140px;
+    transform: scale(0.8);
+    font-weight: bold;
     &--main {
       @include set-bg(white);
       border: pallete(primary);
